# fugue

./: .gitignore  .mcp.example.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COMPLETION_REPORT.md  Cargo.toml  DECLARATIVE.md  FM_AM_SYNTHESIS.md  GETTING_STARTED.md  IMPLEMENTATION.md  LICENSE  MODULAR_CONVERSION_SUMMARY.md  MODULAR_GUIDE.md  MULTI_IO_SUPPORT.md  MUSIC_REFERENCE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SIGNAL_ARCHITECTURE.md  build.rs  install.ps1  install.sh  opencode.example.json  test_timing.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-cli.yml  build-library.yml  build-mcp.yml  build-repl.yml  release.yml  tests.yml
examples/: am_synthesis.json  am_synthesis_demo.rs  control_scheduler.json  development.rs  development_file_patch.json  development_inline_patch.json  development_voice.json  dorian_melody.json  dorian_melody.rs  dorian_melody_declarative.rs  dorian_melody_modular.json  examples.rs  filter_envelope.json  filter_envelope.rs  filter_lfo_wah.json  filter_lfo_wah.rs  fm_synthesis.json  fm_synthesis_demo.rs  in_c.json  lfo_tremolo_sync.json  lfo_tremolo_sync.rs  lfo_vibrato.json  lfo_vibrato.rs  lydian_dream.json  minor_arpeggio.json  mixer_voices.json  mixer_voices.rs  modular_adsr_melody.json  modular_adsr_melody.rs  modular_chain.rs  modular_clock.rs  modular_voice.rs  simple_tone.json  simple_tone.rs  simple_tone_debug.rs  step_sequencer.json  step_sequencer.rs  test_modular_audio.rs
examples/developments/: README.md  marimba.json  pad.json  piano.json  pluck.json  vibraphone.json  voice_library_trio.json
examples/in_c/: README.md  conductor.md  conductor_fallback.js  score-notes.md  score.json  voice_progression.js
include/: fugue.h
scripts/: package-android.sh  package-ios.sh  package-native.sh  package-tools.sh  package-wasm.sh
skills/import-score-from-pdf/: README.md  SKILL.md  fugue.skill.json
src/: atomic.rs  audio.rs  builder.rs  example_catalog.rs  factory.rs  lib.rs  modular_audio.rs  modular_builder.rs  modular_builder.rs.orig  module.rs  oscillator.rs  oscillator_builder.rs  patch.rs  registry.rs  scale.rs  sequencer.rs  signal.rs  synthesis.rs  time.rs  traits.rs
src/agents/: mod.rs  native.rs  wasm.rs
src/dsp/: allpass.rs  damper.rs  delay_line.rs  mod.rs
src/ffi/: mod.rs
src/invention/: audio_assets.rs  builder.rs  development.rs  format.rs  graph.rs  handles.rs  mod.rs  orchestration.rs  reload.rs  render.rs  rpc_snapshot.rs  runtime.rs  save.rs  score.rs  state.rs
src/module/: connection.rs  mod.rs  modular.rs  traits.rs
src/modules/: mod.rs  sample_loading.rs
src/music/: key.rs  mod.rs  note.rs  rhythm.rs
src/oscillator/: mod.rs  modulation.rs  (+1 more)
tests/: agent_test.rs  block_processing_test.rs  clock_adsr_test.rs  clock_subdivisions_test.rs  control_scheduler_test.rs  development_library_test.rs  graph_command_test.rs  in_c_score_test.rs  pkg_manifest_test.rs  pkg_sample_pack_test.rs  plugin_wit_test.rs  pull_based_signal_flow_test.rs  sample_kit_test.rs  save_document_test.rs  signal_flow_test.rs  sustain_pedal_test.rs  tempo_map_test.rs  vca_test.rs  wasm_plugin_benchmark_test.rs
web/: fugue-audio-worklet.js  fugue-code-host.js  fugue-player.js
wit/: fugue-module.wit
(+203 files in other folders)
