[package]
name = "fugue"
version = "0.1.0"
edition = "2021"
autoexamples = false

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
hound = "3.5"
schemars = { version = "1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"
ureq = { version = "2.10", default-features = true }
boa_engine = "0.21.1"
claxon = "0.4.3"
flacenc = "0.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["AudioContext", "AudioDestinationNode"] }

[features]
ffi = []
rpc-schema = ["dep:schemars"]

[[example]]
name = "examples"
path = "examples/examples.rs"
